--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,10 @@
   justify-content: space-between;
 }
 
+.hanja {
+  font-size: 56px;
+}
+
 .image-wrapper {
   width: 45%; /* Adjust as needed */
   margin-bottom: 20px;
